--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,14 @@ project(Project3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Project3 main.cpp
-        Play.h
-        Play.cpp
-        ComparePlay.h
-        ComparePlay.cpp
-        PlayMaxHeap.cpp
-        PlayMaxHeap.h
-        Helpers.h
-        Helpers.cpp
-        PlayHashTable.cpp
-        PlayHashTable.h)
+add_executable(Project3 src/main.cpp
+        src/Play.h
+        src/Play.cpp
+        src/ComparePlay.h
+        src/ComparePlay.cpp
+        src/PlayMaxHeap.cpp
+        src/PlayMaxHeap.h
+        src/Helpers.h
+        src/Helpers.cpp
+        src/PlayHashTable.cpp
+        src/PlayHashTable.h)
