starting new branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,6 @@ add_executable(Project3 src/main.cpp
         src/Helpers.h
         src/Helpers.cpp
         src/PlayHashTable.cpp
-        src/PlayHashTable.h)
+        src/PlayHashTable.h
+        src/NodePlay.h
+        src/NodePlay.cpp)
